Css fixed background not covering

--- a/src/css/stylesCH2019.scss
+++ b/src/css/stylesCH2019.scss
@@ -1,6 +1,5 @@
 html {
   scroll-behavior: smooth;
-  height: 100%;
 }
 
 h1,
@@ -44,7 +43,6 @@ body {
   display: flex;
   flex-direction: row;
   background: #323232;
-  height: 100%;
 }
 
 .headerClass {
