--- a/src/css/stylesCornHacks2019.css
+++ b/src/css/stylesCornHacks2019.css
@@ -1,6 +1,5 @@
 html {
   scroll-behavior: smooth;
-  height: 100%;
 }
 
 h1,
@@ -41,7 +40,6 @@ body {
   display: flex;
   flex-direction: row;
   background: #323232;
-  height: 100%;
 }
 
 .headerClass {
